<resources>
    <string name="app_name">Currency</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="base_currency">Base currency</string>
    <string name="date_from">From</string>
    <string name="date_to">To</string>
    <string name="chart_action">Chart</string>
    <string name="settings">Settings</string>
    <string name="no_start_date">Please select a start date.</string>
    <string name="no_end_date">Please select an end date.</string>
    <string name="details">Details</string>
    <string name="open_details">Dig deeper</string>
</resources>
